--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "ava ./test/test.js",
-    "watch": "watch \"npm run build\" ./src/"
+    "watch": "watch \"npm run build\" ./src/ ./test/"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "ava": "^0.13.0",
+    "glob-promise": "^1.0.6",
     "typings": "^0.7.9",
     "watch": "^0.17.1"
   }
