--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "colors": "^1.1.2",
     "diff": "^2.2.2",
     "glob-promise": "^1.0.6",
+    "json-schema-test-suite": "github:json-schema/JSON-Schema-Test-Suite#node",
     "typings": "^0.7.9",
     "watch": "^0.17.1"
   }
