--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,12 @@
     "noImplicitAny": true,
     "preserveConstEnums": true,
     "outDir": "out",
+    "declaration": true,
     "sourceMap": true,
-    "target": "es6",
+    "target": "es5",
+    "lib": [
+      "es6"
+    ],
     "strictNullChecks": true,
     "types": [
       "node",
@@ -14,7 +18,6 @@
     ]
   },
   "files": [
-    "src/JSONSchema.d.ts",
     "src/index.ts",
     "test/test.ts"
   ],
