--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "json-schema-to-typescript",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "compile json schema to typescript typings",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "tsc": "tsc",
     "build": "gulp build",
-    "test": "gulp test",
+    "test": "gulp test && gulp lint",
     "debug": "gulp debug",
     "watch": "watch \"npm run test\" ./src/ ./test/"
   },
