Minor ts lint fixes (#46)
* Clean dist_tests before building tests

* fix tslint no-consecutive-blank-lines

* fix tslint missing whitespace

* Remove unnecessary semicolon

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npm run build-sources && npm test && npm run lint",
     "build-sources": "tsc -p ./tsconfig.json",
-    "build-tests": "tsc -p ./tsconfig.test.json",
+    "build-tests": "rm -rf ./dist_tests && tsc -p ./tsconfig.test.json",
     "watch": "tsc -p ./tsconfig.json --watch && tsc -p ./tsconfig.test.json --watch",
     "lint": "tslint -c tslint.json src/*.ts",
     "test": "npm run build-tests && ava",
