--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,16 +7,13 @@
     "outDir": "dist",
     "declaration": true,
     "sourceMap": true,
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "es2015"
     ],
-    "strictNullChecks": true,
-    "types": [
-      "node"
-    ]
+    "strictNullChecks": true
   },
-  "files": [
-    "src/index.ts"
+  "exclude": [
+    "node_modules"
   ]
 }
