--- a/example/package.json
+++ b/example/package.json
@@ -2,17 +2,13 @@
   "name": "json-schema-to-typescript-example",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "scripts": {   
-    "build": "npm run clean && npm run build-sources && node dist/index.js",
-    "clean": "rimraf dist",
-    "build-sources": "tsc -p ./tsconfig.json"
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc && node ./index.js"
   },
-  
   "dependencies": {
-    "@types/node": "^4.0.30",
-    "typescript": "2.0.0",
-    "json-schema-to-typescript": "2.4.1"
+    "@types/node": "^4",
+    "typescript": "^2",
+    "json-schema-to-typescript": "^2"
   }
 }
