--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -4,9 +4,9 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "preserveConstEnums": true,
-    "outDir": "dist",
-    "declaration": true,
-    "sourceMap": true,
+    "outDir": ".",
+    "declaration": false,
+    "sourceMap": false,
     "target": "es6",
     "lib": [
       "es2015"
@@ -17,6 +17,6 @@
     ]
   },
   "files": [
-    "src/index.ts"
+    "index.ts"
   ]
 }
