--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "sourceMap": true,
     "target": "es6",
     "lib": [
-      "es2015"
+      "es2015",
+      "es2016.array.include"
     ],
     "strictNullChecks": true
   },
