--- a/package.json
+++ b/package.json
@@ -39,14 +39,19 @@
     "lodash": "^4.6.1"
   },
   "devDependencies": {
+    "@types/cli-color": "^0.3.29",
     "@types/lodash": "0.0.28",
     "@types/node": "^4.0.30",
     "ava": "^0.16.0",
+    "cli-color": "^1.1.0",
+    "generic-diff": "^1.0.1",
     "tslint": "^3.15.1",
     "typescript": "^2.0.0"
   },
   "ava": {
-    "files": ["./dist_tests/test/test.js"],
+    "files": [
+      "./dist_tests/test/test.js"
+    ],
     "source": [
       "./dist_tests/test/cases/*.js",
       "./dist_tests/src/*.js"
