--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "json-schema-to-typescript",
-  "version": "2.4.1",
+  "version": "2.5.0",
   "description": "compile json schema to typescript typings",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "typings": "dist/src/index.d.ts",
   "scripts": {
-    "build": "npm run build-sources && npm test && npm run lint",
-    "build-sources": "tsc -p ./tsconfig.json",
-    "build-tests": "rm -rf ./dist_tests && tsc -p ./tsconfig.test.json",
-    "watch": "tsc -p ./tsconfig.json --watch & tsc -p ./tsconfig.test.json --watch",
+    "build": "rm -rf dist && tsc -d",
     "lint": "tslint -c tslint.json src/*.ts",
-    "test": "npm run build-tests && ava",
-    "tdd": "ava --watch",
-    "prepublish": "npm run build"
+    "tdd": "concurrently -k 'npm run watch' 'npm run watch:test'",
+    "test": "ava",
+    "prepublish": "npm test",
+    "pretest": "npm run build",
+    "watch": "tsc -w",
+    "watch:test": "ava -w"
   },
   "repository": {
     "type": "git",
@@ -36,25 +36,26 @@
   },
   "homepage": "https://github.com/bcherny/json-schema-to-typescript#readme",
   "dependencies": {
-    "lodash": "^4.6.1"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
-    "@types/lodash": "0.0.28",
-    "@types/node": "^4.0.30",
-    "ava": "^0.16.0",
-    "cli-color": "^1.1.0",
+    "@types/lodash": "4.14.62",
+    "@types/node": "^7.0.12",
+    "ava": "^0.19.1",
+    "cli-color": "^1.2.0",
+    "concurrently": "^3.4.0",
     "generic-diff": "^1.0.1",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.0"
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.2"
   },
   "ava": {
     "files": [
-      "./dist_tests/test/test.js"
+      "./dist/test/test.js"
     ],
     "source": [
-      "./dist_tests/test/cases/*.js",
-      "./dist_tests/src/*.js"
+      "./dist/test/cases/*.js",
+      "./dist/src/*.js"
     ],
     "vebose": true
   }
