--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,19 @@
   "version": "0.2.5",
   "configurations": [
     {
-			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Run mocha",
-			// Type of configuration. Possible values: "node", "mono".
-			"type": "node",
-			// Workspace relative or absolute path to the program.
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			// Automatically stop program after launch.
-			"stopOnEntry": false,
-			// Command line arguments passed to the program.
-			"args": ["out/test/test.js"],
-			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
-			"cwd": "${workspaceRoot}",
-			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
-			"runtimeExecutable": null,
-			// Environment variables passed to the program.
-			"env": { "NODE_ENV": "production"}
-}
+        "type": "node",
+        "request": "launch",
+        "name": "Launch Program",
+        "program": "${workspaceRoot}/node_modules/.bin/ava ./dist/test/test.js",
+        "cwd": "${workspaceRoot}"
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach to Process",
+      "processId": "${command:PickProcess}",
+      "port": 5858,
+      "sourceMaps": true
+    }
   ]
 }
