store property names and isRequired on interface, not on members

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     ],
     "source": [
       "./dist/test/e2e/*.js",
-      "./dist/src/*.js"
+      "./dist/src/*.js",
+      "./test/resources/*.json"
     ],
     "vebose": true
   }
