--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@types/json-schema": "^4.0.0",
     "json-schema-ref-parser": "^3.1.2",
+    "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
