--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,10 @@
 .DS_Store
+.vscode
 npm-debug.log
 node_modules
 *.map
-dist_tests/
+example/*
+test/*
+circle.yml
+ARCHITECTURE.md
+CONTRIBUTING.md
