Install and test working on Windows

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run clean && mkdir dist && npm run build:browser && npm run build:server",
     "build:browser": "browserify src/index.ts -s jstt -p tsify > dist/bundle.js",
     "build:server": "tsc -d",
-    "clean": "rm -rf dist",
+    "clean": "shx rm -rf dist",
     "lint": "tslint -c tslint.json src/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
     "test": "ava --verbose",
@@ -64,6 +64,7 @@
     "browserify": "^14.3.0",
     "concurrently": "^3.4.0",
     "fast-diff": "^1.1.1",
+    "shx": "^0.2.2",
     "table-layout": "^0.4.0",
     "tsify": "^3.0.1",
     "tslint": "^5.1.0",
