prettier (blocked on prettier/issues/648) (fix #45)

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
-    "mz": "^2.7.0",
+    "mz": "^2.6.0",
+    "prettier": "^1.7.0",
     "stdin": "0.0.1"
   },
   "devDependencies": {
@@ -59,10 +60,11 @@
     "@types/lodash": "4.14.74",
     "@types/minimist": "^1.2.0",
     "@types/mz": "0.0.31",
-    "@types/node": "^8.0.28",
-    "ava": "^0.22.0",
-    "browserify": "^14.4.0",
-    "concurrently": "^3.5.0",
+    "@types/node": "^7.0.13",
+    "@types/prettier": "^1.6.1",
+    "ava": "^0.19.1",
+    "browserify": "^14.3.0",
+    "concurrently": "^3.4.0",
     "fast-diff": "^1.1.1",
     "shx": "^0.2.2",
     "table-layout": "^0.4.2",
