fix after updating lodash typings

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "dependencies": {
     "@types/cli-color": "^0.3.29",
     "@types/json-schema": "^4.0.0",
-    "@types/lodash": "4.14.83",
+    "@types/lodash": "^4.14.88",
     "@types/minimist": "^1.2.0",
     "@types/mz": "0.0.32",
     "@types/node": "^8.0.50",
