Make typescript strict (#187)
* change tsconfig.json (typescript) to use strict mode and fix one error that presents when strict mode is used

* remove now (after adding strict: true) redundant noImplicitAny and strictNullChecks from tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,12 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "dist",
     "preserveConstEnums": true,
     "sourceMap": true,
-    "strictNullChecks": true,
+    "strict": true,
     "target": "es5"
   },
   "exclude": [
