--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-schema-to-typescript",
-  "version": "6.1.2",
+  "version": "6.1.3",
   "description": "compile json schema to typescript typings",
   "main": "dist/src/index.js",
   "bin": {
@@ -64,6 +64,7 @@
   "devDependencies": {
     "ava": "^1.2.1",
     "browserify": "^16.2.3",
+    "browserify-shim": "^3.8.14",
     "concurrently": "^4.1.0",
     "shx": "^0.3.2",
     "tsify": "^4.0.1",
@@ -82,5 +83,13 @@
       "./test/resources/*.json"
     ],
     "vebose": true
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "prettier": "global:prettier"
   }
 }
