--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "shx rm -rf dist",
     "lint": "tslint -c tslint.json src/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
-    "test": "ava --verbose",
+    "test": "ava --serial --verbose",
     "prepublishOnly": "npm test",
     "pretest": "npm run build",
     "watch": "tsc -w",
