--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "build:browser": "browserify src/index.ts -s jstt -p tsify > dist/bundle.js",
     "build:server": "tsc -d",
     "clean": "shx rm -rf dist",
-    "lint": "tslint -c tslint.json src/*.ts",
+    "lint": "eslint src/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
     "test": "ava --serial --verbose",
     "prepublishOnly": "npm test",
-    "pretest": "npm run build",
+    "pretest": "npm run build && npm run lint",
     "watch": "tsc -w",
     "watch:test": "ava -w"
   },
@@ -54,7 +54,7 @@
     "lodash": "^4.17.11",
     "minimist": "^1.2.0",
     "mz": "^2.7.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "stdin": "0.0.1"
   },
   "devDependencies": {
@@ -62,13 +62,17 @@
     "@types/lodash": "^4.14.121",
     "@types/minimist": "^1.2.0",
     "@types/mz": "0.0.32",
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
     "ava": "^1.2.1",
     "browserify": "^16.2.3",
     "browserify-shim": "^3.8.14",
     "concurrently": "^4.1.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "shx": "^0.3.2",
     "tsify": "^4.0.1",
-    "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
   },
   "ava": {
