--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-schema-to-typescript",
-  "version": "7.1.0",
+  "version": "8.0.0",
   "description": "compile json schema to typescript typings",
   "main": "dist/src/index.js",
   "bin": {
@@ -15,7 +15,7 @@
     "build:browser": "browserify src/index.ts -s jstt -p tsify > dist/bundle.js",
     "build:server": "tsc -d",
     "clean": "shx rm -rf dist",
-    "lint": "eslint src/*.ts",
+    "lint": "eslint src/*.ts test/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
     "test": "ava --serial --verbose",
     "prepublishOnly": "npm test",
