add cli directory support (using globs) (#238)
* Add directory support

* updates

* reset vscode settings

* fixes on fixes

* complete glob and dir support

* add error check

* remove ?.

* use old node friendly methods

* bump @types/node

* actually add the package.json this time

* resolve pr comments

* add pathTransform test

* fix util test

* remove return and add documentation

--- a/package.json
+++ b/package.json
@@ -45,23 +45,29 @@
   },
   "homepage": "https://github.com/bcherny/json-schema-to-typescript#readme",
   "dependencies": {
+    "@types/is-glob": "^4.0.1",
     "@types/json-schema": "^7.0.3",
-    "@types/node": ">=4.5.0",
+    "@types/mkdirp": "^0.5.2",
     "@types/prettier": "^1.16.1",
     "cli-color": "^1.4.0",
+    "glob": "^7.1.4",
+    "is-glob": "^4.0.1",
     "json-schema-ref-parser": "^6.1.0",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.11",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mz": "^2.7.0",
     "prettier": "^1.19.1",
     "stdin": "0.0.1"
   },
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
+    "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.121",
     "@types/minimist": "^1.2.0",
     "@types/mz": "0.0.32",
+    "@types/node": "^12.12.29",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "ava": "^1.2.1",
