--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "shx rm -rf dist",
     "lint": "eslint src/*.ts test/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
-    "test": "ava --serial --verbose",
+    "test": "ava --serial --timeout=100s --verbose",
     "prepublishOnly": "npm test",
     "pretest": "npm run build && npm run lint",
     "watch": "tsc -w",
@@ -46,52 +46,49 @@
   "homepage": "https://github.com/bcherny/json-schema-to-typescript#readme",
   "dependencies": {
     "@types/is-glob": "^4.0.1",
-    "@types/json-schema": "^7.0.3",
-    "@types/mkdirp": "^0.5.2",
-    "@types/prettier": "^1.16.1",
-    "cli-color": "^1.4.0",
-    "glob": "^7.1.4",
+    "@types/json-schema": "^7.0.4",
+    "@types/mkdirp": "^1.0.0",
+    "@types/prettier": "^1.19.0",
+    "cli-color": "^2.0.0",
+    "glob": "^7.1.6",
     "is-glob": "^4.0.1",
-    "json-schema-ref-parser": "^6.1.0",
+    "json-schema-ref-parser": "^8.0.0",
     "json-stringify-safe": "^5.0.1",
-    "lodash": "^4.17.11",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
+    "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
+    "mkdirp": "^1.0.3",
     "mz": "^2.7.0",
     "prettier": "^1.19.1",
     "stdin": "0.0.1"
   },
   "devDependencies": {
-    "@types/cli-color": "^0.3.29",
+    "@types/cli-color": "^2.0.0",
     "@types/glob": "^7.1.1",
-    "@types/lodash": "^4.14.121",
+    "@types/lodash": "^4.14.149",
     "@types/minimist": "^1.2.0",
-    "@types/mz": "0.0.32",
-    "@types/node": "^12.12.29",
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/parser": "^2.9.0",
-    "ava": "^1.2.1",
-    "browserify": "^16.2.3",
+    "@types/mz": "^2.7.0",
+    "@types/node": "^13.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "ava": "^3.5.0",
+    "browserify": "^16.5.0",
     "browserify-shim": "^3.8.14",
-    "concurrently": "^4.1.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "shx": "^0.3.2",
     "tsify": "^4.0.1",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.8.3"
   },
   "ava": {
     "files": [
       "./dist/test/test.js"
     ],
-    "snapshotDir": "./test/__snapshots__",
-    "sources": [
-      "./dist/test/e2e/*.js",
-      "./dist/test/normalizer/*.json",
-      "./dist/src/*.js",
-      "./test/resources/*.json"
+    "ignoredByWatcher": [
+      "./src"
     ],
+    "snapshotDir": "./test/__snapshots__",
     "vebose": true
   },
   "browserify": {
