update prettier to v2.x (#287)

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "useTabs": false
+  "useTabs": false,
+  "arrowParens": "avoid"
 }
