--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-      run: yarn install --ignore-engines 
+      run: yarn install --ignore-engines --verbose 
     - name: Run tests
       run: yarn test
       env:
