--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     
     strategy:
+      fail-fast: false
       matrix:
         node-version: [4.5.0, 6.x, 8.x, 10.x, 12.x, 13.x]
         os: [ubuntu-latest, windows-latest, macOS-latest]
