--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [4.5.0, 6.x, 8.x, 10.x, 12.x, 13.x]
+        node-version: [10.x, 12.x, 13.x]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
