--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "rimraf": "^3.0.2",
     "shx": "^0.3.2",
     "tsify": "^4.0.1",
     "typescript": "^3.8.3"
