--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint src/*.ts test/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
     "test": "ava --timeout=300s --verbose",
+    "stresstest": "seq 1 10 | xargs -I{} npm test",
     "prepublishOnly": "npm test",
     "pretest": "npm run build && npm run lint",
     "watch": "tsc -w",
