--- a/package.json
+++ b/package.json
@@ -46,39 +46,39 @@
   },
   "homepage": "https://github.com/bcherny/json-schema-to-typescript#readme",
   "dependencies": {
-    "@types/is-glob": "^4.0.1",
     "@types/json-schema": "^7.0.4",
-    "@types/mkdirp": "^1.0.0",
-    "@types/prettier": "^1.19.1",
     "cli-color": "^2.0.0",
     "glob": "^7.1.6",
     "is-glob": "^4.0.1",
-    "json-schema-ref-parser": "^8.0.0",
+    "json-schema-ref-parser": "^9.0.1",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
-    "mkdirp": "^1.0.3",
+    "mkdirp": "^1.0.4",
     "mz": "^2.7.0",
-    "prettier": "^2.0.2",
+    "prettier": "^2.0.5",
     "stdin": "0.0.1"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
     "@types/glob": "^7.1.1",
-    "@types/lodash": "^4.14.149",
+    "@types/is-glob": "^4.0.1",
+    "@types/lodash": "^4.14.150",
     "@types/minimist": "^1.2.0",
+    "@types/mkdirp": "^1.0.0",
     "@types/mz": "^2.7.0",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.13.4",
+    "@types/prettier": "2.0.0",
     "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "ava": "^3.5.0",
-    "browserify": "^16.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "ava": "^3.8.1",
+    "browserify": "^16.5.1",
     "browserify-shim": "^3.8.14",
-    "concurrently": "^5.1.0",
+    "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "rimraf": "^3.0.2",
     "shx": "^0.3.2",
     "tsify": "^4.0.1",
