--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "shx rm -rf dist",
     "lint": "eslint src/*.ts test/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
-    "test": "ava --timeout=300s --verbose",
+    "test": "ava -c 1 --timeout=300s --verbose",
     "stresstest": "seq 1 10 | xargs -I{} npm test",
     "prepublishOnly": "npm test",
     "pretest": "npm run build && npm run lint",
