--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "build": "npm run clean && mkdir dist && npm run build:browser && npm run build:server",
+    "build": "npm run lint && npm run clean && npm run build:browser && npm run build:server",
     "build:browser": "browserify src/index.ts -s jstt -p tsify > dist/bundle.js",
     "build:server": "tsc -d",
-    "clean": "shx rm -rf dist",
+    "clean": "shx rm -rf dist && mkdir dist",
     "lint": "eslint src/*.ts test/*.ts",
     "tdd": "concurrently -r -p '' -k 'npm run watch' 'npm run watch:test'",
     "test": "ava --timeout=300s --verbose",
     "stresstest": "seq 1 10 | xargs -I{} npm test",
     "prepublishOnly": "npm test",
-    "pretest": "npm run lint && npm run build",
+    "pretest": "npm run clean && npm run build:server",
     "watch": "tsc -w",
     "watch:test": "ava -w"
   },
