--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "homepage": "https://github.com/bcherny/json-schema-to-typescript#readme",
   "dependencies": {
     "@types/json-schema": "^7.0.6",
+    "@types/prettier": "^2.1.5",
     "cli-color": "^2.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
@@ -69,7 +70,6 @@
     "@types/mkdirp": "^1.0.1",
     "@types/mz": "^2.7.2",
     "@types/node": "^14.14.10",
-    "@types/prettier": "2.1.5",
     "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
