Replace dubious dependency `stdin` with `get-stdin` * 'stdin' is a package consisting in one commit 8 years ago. There is no support, there is no community, and it is not even easy to find the source code (you have to download the tarball using the link from the yarn.lock, you will not find the repository elsewhere) * In contrast, `get-stdin` has active support and is more used by two orders of magnitude * I firmly believe that the world will be a better place when packages like `stdin` slowly disappear from our dependency trees

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/lodash": "^4.14.168",
     "@types/prettier": "^2.1.5",
     "cli-color": "^2.0.0",
+    "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
     "is-glob": "^4.0.1",
@@ -59,8 +60,7 @@
     "minimist": "^1.2.5",
     "mkdirp": "^1.0.4",
     "mz": "^2.7.0",
-    "prettier": "^2.2.0",
-    "stdin": "0.0.1"
+    "prettier": "^2.2.0"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
