--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "homepage": "https://github.com/bcherny/json-schema-to-typescript#readme",
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@types/json-schema": "^7.0.11",
     "@types/lodash": "^4.14.182",
     "@types/prettier": "^2.6.1",
@@ -54,7 +55,6 @@
     "glob": "^8.0.3",
     "glob-promise": "^4.2.2",
     "is-glob": "^4.0.3",
-    "json-schema-ref-parser": "^9.0.9",
     "lodash": "^4.17.21",
     "minimist": "^1.2.6",
     "mkdirp": "^1.0.4",
